1. Collection API Улучшения[#145301]